@@ -153,7 +153,7 @@ public class JenkinsTest {
         assumeFalse(Functions.isWindows());
 
         HtmlPage page = j.createWebClient().goTo("fingerprintCheck");
-        HtmlForm form = page.getForms().get(0);
+        HtmlForm form = page.getForms().getFirst();
         File dir = newFolder(tmp, "junit");
         File plugin = new File(dir, "htmlpublisher.jpi");
         // We're using a plugin to have a file above DiskFileItemFactory.DEFAULT_SIZE_THRESHOLD
